--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,15 @@
 body {
     margin: 0px;
+    font-family: 'Roboto', sans-serif;
 }
-.contact-hours-wrapper {
+.left-column > .contact-hours-wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+}
 
-    color:royalblue;
-}
 
-.address-wrapper {
-    color: red;
-}
+/* .address-wrapper {
+} */
 
 .navigation-wrapper {
     height: 190px;
@@ -17,5 +18,54 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 43px 0px 50px;
+    padding: 60px 100px;
+}
+.navigation-wrapper >  .left-column {
+    display: flex;
+    align-items: center;
+}
+.icon {
+    margin:15px;
+}
+
+
+.navigation-wrapper > .left-column > .icon {
+    margin-right: 15px;
+}
+
+.navigation-wrapper > .left-column > .icon i {
+    font-size: 2em;
+}
+
+navigation-wrapper > .left-column > .contact-hours-wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+}
+
+.navigation-wrapper > .contact-hours-wrapper > .hours {
+    font-family: 'Ubuntu Condensed', sans-serif;
+}
+
+.links-wrapper > .nav-link a {
+    font-family: 'Ubuntu Condensed', sans-serif;
+    color: white;
+}
+
+.navigation-wrapper > .right-column > .address-wrapper {
+    font-family: 'Ubuntu Condensed', sans-serif;
+}
+
+.navigation-wrapper > .center-column {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 42px;
+    width: 500px;
+}
+
+
+.navigation-wrapper > .center-column > .banner-image img {
+    font-family: 'Ubuntu Condensed', sans-serif;
+    width: 216px;
+    height: 100%;
 }
