--- a/styles/common.css
+++ b/styles/common.css
@@ -16,62 +16,7 @@ h6 {
   font-family: "Roboto Slab", serif;
 }
 
-/* Footer styles */
-.footer {
-  background-color: #11122b;
-  color: #cbcbcb;
-  font-family: "Ubuntu Condensed", sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  height: 400px;
-}
 
-/* Footer styles */
-.footer > .logo-footer img {
-  width: 180px;
-  height: auto;
-  opacity: 0.5;
-  filter: brightness(30%);
-}
-
-.footer > .footer-phone-hours span {
-  margin-left: 10px;
-  margin-right: 10px;
-  font-size: 1em;
-  letter-spacing: 2px;
-}
-
-.footer > .footer-phone-hours > .hours {
-  font-size: 0.8em;
-  color: #cea135;
-  text-transform: uppercase;
-}
-
-.footer > .copyright-wrapper {
-  margin-bottom: 42px;
-  font-size: 0.7em;
-  color: #858585;
-}
-
-.footer > .social-media-icons-wrapper {
-  margin-top: 40px;
-  margin-bottom: 40px;
-  width: 300px;
-  display: flex;
-  justify-content: space-around;
-}
-
-.footer > .social-media-icons-wrapper a {
-  font-size: 1.5em;
-  color: #cbcbcb;
-  transition: 0.5s;
-}
-
-.footer > .social-media-icons-wrapper a:hover {
-  color: #cea135;
-}
 
 .skewed-header {
   position: relative;
@@ -134,3 +79,39 @@ h6 {
   float: left;
 }
 /* Square Grid Styles */
+
+.squares-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.squares-wrapper > .squares {
+  width: 1000px;
+}
+
+.squares-wrapper > .squares > .square {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.square > .img-wrapper img {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+}
+
+.square > .square-text-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 42px;
+}
+
+.square > .square-text-wrapper h1 {
+    color: #cea135;
+}
+.spacer100 {
+    height: 100px;
+    width: 100%
+}
