--- a/styles/contact.css
+++ b/styles/contact.css
@@ -22,3 +22,6 @@
   margin-bottom: 20px;
   font-size: 1.25em;
 }
+.company-metadata-sidebar-wrapper > .company-details-wrapper i {
+  color: #cea135;
+}
